Code improvements (Sonar + Java 21)
Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>